--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,4 +57,19 @@ h2 {
     margin-bottom: 20px;
 }
 
+.div-login {
+    background-color: #fff; /* Fondo blanco */
+    border: 2px solid #007bff; /* Borde de color azul */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+}
+
+.form-control {
+    border-radius: 5px; /* Bordes redondeados para los campos */
+}
+
+.form-login .btn-dark {
+    background-color: #000; /* Fondo negro para el botón */
+    border-color: #000; /* Borde negro */
+}
+
 
